--- a/evaluation.ipynb
+++ b/evaluation.ipynb
@@ -23,7 +23,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,6 +37,7 @@
     "from tensorflow.keras.layers import Conv2D, MaxPooling2D, Dropout, Dense, Flatten, Activation\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score\n",
     "\n",
     "import numpy as np\n",
     "import random\n",
@@ -47,17 +48,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Data shapes: (10000, 28, 28, 1) (10000, 10)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#load the data\n",
     "(x, y), (x_test, y_test) = mnist.load_data()\n",
@@ -81,43 +74,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Base accuracy on regular images: [0.0047225565649569035, 0.9695000052452087]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#load the model\n",
     "victim_model = tf.keras.models.load_model('model/victim_model')\n",
     "\n",
     "#testing model\n",
-    "print(\"Base accuracy on regular images:\", victim_model.evaluate(x=x_test, y=y_test, verbose=0))"
+    "print(\"Base accuracy on regular images:\", victim_model.evaluate(x=x_test, y=y_test))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Base accuracy on regular images: [0.015253733843564987, 0.8949999809265137]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "attack_model = tf.keras.models.load_model('model/attack_model/d4i2s1600')\n",
     "\n",
     "#testing model\n",
-    "print(\"Base accuracy on regular images:\", attack_model.evaluate(x=x_test, y=y_test, verbose=0))"
+    "print(\"Base accuracy on regular images:\", attack_model.evaluate(x=x_test, y=y_test))"
    ]
   },
   {
