--- a/main.ipynb
+++ b/main.ipynb
@@ -302,7 +302,7 @@
    "outputs": [],
    "source": [
     "#Training substitute model\n",
-    "def train_attack_model(iteration, init_num, detector=False, model_arch=4, eps=64/255.0):\n",
+    "def train_attack_model(iteration, init_num, detector=False, model_arch=4, eps=0.25):\n",
     "\n",
     "    print(\"Attack start!\")\n",
     "    counter = 1\n",
@@ -360,7 +360,7 @@
     "            if detector:\n",
     "                model_path = 'model/attack_model/d'+str(budget)+'i'+str(iteration)+'s'+str(init_num)\n",
     "            elif model_arch == 4:\n",
-    "                model_path = 'model/attack_model/i'+str(iteration)+'s'+str(init_num)\n",
+    "                model_path = 'model/attack_model/i'+str(iteration)+'s'+str(init_num)+'c'+str(round(eps, 2))\n",
     "                #model_path = 'model/attack_model_fashion/i'+str(iteration)+'s'+str(init_num)\n",
     "            else:\n",
     "                model_path = 'model/attack_model/mismatch_layer'+str(model_arch)\n",
@@ -378,7 +378,7 @@
    "outputs": [],
    "source": [
     "#start attack: train_attack_model(iteration, init_num, detector, model_arch, eps)\n",
-    "train_attack_model(2, 1600)"
+    "train_attack_model(4, 400)"
    ]
   },
   {
