--- a/main.ipynb
+++ b/main.ipynb
@@ -38,6 +38,8 @@
     "\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
+    "from tqdm import tqdm\n",
+    "\n",
     "import numpy as np\n",
     "import random\n",
     "from random import randrange\n",
@@ -192,42 +194,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#create detector\n",
-    "\n",
-    "#split benign set, adv seed set\n",
-    "x_test_split, x_test_split2, y_test_split, y_test_split2 = train_test_split(x_test, y_test, test_size=0.5, random_state=0)\n",
-    "\n",
-    "#load the victim model\n",
-    "victim_model = tf.keras.models.load_model('model/victim_model')\n",
-    "\n",
-    "#label normal image (label = 0)\n",
-    "y_benign_test = np.zeros((x_test_split.shape[0], 1))\n",
-    "\n",
-    "#label adv image (label = 1)\n",
-    "y_adv_test = np.ones((x_test_split2.shape[0], 1))\n",
-    "\n",
-    "y_detector_test = np.concatenate((y_benign_test, y_adv_test), axis=0)\n",
-    "x_detector_test = x_test_split\n",
-    "\n",
-    "#generate adversal data\n",
-    "eps=64/255.0\n",
-    "for i in range(x_test_split2.shape[0]):\n",
-    "    image = x_test_split2[i]\n",
-    "    image_label = y_test_split2[i]\n",
-    "    perturbations = adversarial_pattern(image.reshape((1, img_rows, img_cols, channels)), image_label, victim_model).numpy()\n",
-    "    adversarial = image + perturbations * eps\n",
-    "    x_detector_test = np.append(x_detector_test, adversarial, axis = 0)\n",
-    "\n",
-    "print(x_detector_test.shape, y_detector_test.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#generate adv dataset\n",
+    "#generate adv dataset (1:2700 adv data)\n",
     "budget = 1\n",
     "\n",
     "#split benign set, adv seed set\n",
@@ -237,21 +204,31 @@
     "y_benign = np.zeros((x_benign.shape[0], 1))\n",
     "\n",
     "#label adv image (label = 1)\n",
-    "y_adv = np.ones((x_seed.shape[0], 1))\n",
+    "y_adv = np.ones((x_seed.shape[0]*4, 1))\n",
     "\n",
     "y_detector_train = np.concatenate((y_benign, y_adv), axis=0)\n",
     "x_detector_train = x_benign\n",
     "\n",
     "#generate adversal data\n",
-    "eps=64/255.0\n",
-    "for i in range(x_seed.shape[0]):\n",
+    "for i in tqdm(range(x_seed.shape[0])):\n",
     "    image = x_seed[i]\n",
     "    image_label = y_seed[i]\n",
     "    perturbations = adversarial_pattern(image.reshape((1, img_rows, img_cols, channels)), image_label, victim_model).numpy()\n",
-    "    adversarial = image + perturbations * eps\n",
-    "    x_detector_train = np.append(x_detector_train, adversarial, axis = 0)\n",
+    "    x_detector_train = np.append(x_detector_train, image + perturbations * 0.1, axis = 0)\n",
+    "    x_detector_train = np.append(x_detector_train, image + perturbations * 0.15, axis = 0)\n",
+    "    x_detector_train = np.append(x_detector_train, image + perturbations * 0.2, axis = 0)\n",
+    "    x_detector_train = np.append(x_detector_train, image + perturbations * 0.25, axis = 0)\n",
     "\n",
-    "print(x_detector_train.shape, y_detector_train.shape, x_detector_test.shape, y_detector_test.shape)"
+    "print(x_detector_train.shape, y_detector_train.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(x_detector_train.shape, y_detector_train.shape)"
    ]
   },
   {
@@ -265,9 +242,7 @@
     "def create_detector_model():\n",
     "    model = Sequential()\n",
     "    model.add(Conv2D(32, kernel_size=(3, 3), strides=(3, 3), padding='same', activation='relu', input_shape=(img_rows, img_cols, channels)))\n",
-    "    model.add(MaxPooling2D(pool_size=(2, 2)))\n",
     "    model.add(Conv2D(64, kernel_size=(3, 3), strides=(3, 3), padding='same', activation='relu'))\n",
-    "    model.add(MaxPooling2D(pool_size=(2, 2)))\n",
     "    model.add(Flatten())\n",
     "    model.add(Dense(200))\n",
     "    model.add(Dense(1, activation='sigmoid'))\n",
@@ -277,7 +252,7 @@
     "    return model\n",
     "\n",
     "detector_model = create_detector_model()\n",
-    "detector_model.fit(x_detector_train, y_detector_train, batch_size=32, epochs=10, validation_data = (x_detector_test, y_detector_test))\n",
+    "detector_model.fit(x_detector_train, y_detector_train, batch_size=32, epochs=10)\n",
     "detector_model.save('model/detector_model/b'+str(budget))"
    ]
   },
@@ -360,7 +335,7 @@
     "            if detector:\n",
     "                model_path = 'model/attack_model/d'+str(budget)+'i'+str(iteration)+'s'+str(init_num)\n",
     "            elif model_arch == 4:\n",
-    "                model_path = 'model/attack_model/i'+str(iteration)+'s'+str(init_num)+'c'+str(round(eps, 2))\n",
+    "                model_path = 'model/attack_model/i'+str(iteration)+'s'+str(init_num)\n",
     "                #model_path = 'model/attack_model_fashion/i'+str(iteration)+'s'+str(init_num)\n",
     "            else:\n",
     "                model_path = 'model/attack_model/mismatch_layer'+str(model_arch)\n",
@@ -378,7 +353,7 @@
    "outputs": [],
    "source": [
     "#start attack: train_attack_model(iteration, init_num, detector, model_arch, eps)\n",
-    "train_attack_model(4, 400)"
+    "train_attack_model(2, 1600, True)"
    ]
   },
   {
