--- a/evaluation.ipynb
+++ b/evaluation.ipynb
@@ -78,31 +78,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#load the model\n",
+    "#testing victim model\n",
     "victim_model = tf.keras.models.load_model('model/victim_model')\n",
+    "print(\"Accuracy on victim model:\", victim_model.evaluate(x=x_test, y=y_test, verbose=0)[1])\n",
     "\n",
-    "#testing model\n",
-    "print(\"Base accuracy on regular images:\", victim_model.evaluate(x=x_test, y=y_test))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "attack_model = tf.keras.models.load_model('model/attack_model/d4i2s1600')\n",
+    "#testing attack model\n",
+    "attack_model = tf.keras.models.load_model('model/attack_model/i2s100')\n",
+    "print(\"Accuracy on attack model:\", attack_model.evaluate(x=x_test, y=y_test, verbose=0)[1])\n",
     "\n",
-    "#testing model\n",
-    "print(\"Base accuracy on regular images:\", attack_model.evaluate(x=x_test, y=y_test))"
+    "#testing detector model\n",
+    "detect_model = tf.keras.models.load_model('model/attack_model/d1i2s100')\n",
+    "print(\"Accuracy on attack model after apply detector:\", detect_model.evaluate(x=x_test, y=y_test, verbose=0)[1])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ]
 }
